První verze registrace, předělání loginu z username na email, z toho důvodu předělání i session variable na email z username

--- a/styles.css
+++ b/styles.css
@@ -1202,6 +1202,10 @@ ul {
     font-weight:600;
 }
 
+.error-msg{
+    margin-bottom: 0.4em;
+}
+
 @media only screen and (max-width: 1516px) {
     .home-page-pupular-category-button{
         width: 450px;
