--- a/styles.css
+++ b/styles.css
@@ -724,7 +724,6 @@ footer p{
 
 .Account-btns {
     width:100%;
-    height:50%;
     background:transparent;
     border:none;
     outline:none;
@@ -762,7 +761,7 @@ ul {
 
 }
 
-#change-submit{
+#change-submit, #pass-change-submit{
     width:35%;
     height:45px;
     background:var(--header-nav-blue);
@@ -775,7 +774,7 @@ ul {
     color: var(--white);
     font-weight:600;
 }
-#pass-change-submit{
+#F{
     width:64%;
     height:45px;
     background:var(--header-nav-blue);
